--- a/scrawly-api/.env
+++ b/scrawly-api/.env
@@ -26,3 +26,7 @@ APP_SECRET=e6f98dc35def93d44c1be7f4cb68d1de
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+###< nelmio/cors-bundle ###
